# kshalopy

./: .gitignore  .pylintrc  LICENSE  Pipfile  README.md  auth_driver.py  auth_test.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: workflow.yaml
examples/: example.py
kshalopy/: __init__.py  auth.py  auth_helper.py  auth_initiator.py  config.py  constants.py  default_config.json  factor.py  utils.py
kshalopy/credentials/: __init__.py  credentials.py  credentials_daemon.py  daemon.py
kshalopy/halo_credentials/: credentials.py
kshalopy/login/: __init__.py  config.py  factor.py  helper.py  login.py  utils.py
kshalopy/models/: __init__.py  models.py
kshalopy/realtime/: __init__.py  daemon.py  realtime.py
kshalopy/rest/: __init__.py  rest.py
notes/: appsync schema.txt  gql_query.py  gql_subscription.py  notes.txt
src/kshalopy/: __init__.py  config.py  default_config.json  utils.py
src/kshalopy/credentials/: credentials.py  daemon.py
src/kshalopy/login/: config.py  factor.py  helper.py  login.py  utils.py
src/kshalopy/models/: models.py
src/kshalopy/realtime/: daemon.py  realtime.py
src/kshalopy/rest/: rest.py
tests/: test_config.py  test_utils.py
tests/credentials/: test_credentials.json  test_credentials.py  test_daemon.py  test_partial_credentials.json
tests/login/: test_factor.py  test_login.py
tests/realtime/: test_daemon.py  test_realtime.py
tests/rest/: test_config.json  test_credentials.json  test_rest.py
