[metadata]
name = kshalopy-arcadecoffee
version = 0.0.1
author = Jerry Gregoire
author_email = jerry@arcadecoffee.com
description = KwikSet Halo interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arcadecoffee/kshalopy
project_urls =
    Bug Tracker = https://github.com/arcadecoffee/kshalopy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boto3
    python-dateutil
    websocket-client

[options.package_data]
* = *.json

[options.packages.find]
where = src
